force-app/main/default/objects/AI_Intent_Action_Detail__c/AI_Intent_Action_Detail__c.object-meta.xml
<CustomObject>
    <label>Intent Action Detail</label>
    <nameField>
        <displayFormat>IAD-{000000}</displayFormat>
        <label>Detail #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Intent Action Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>