force-app/main/default/objects/AI_Intent_Action_Detail__c/fields/AI_Intent_Action__c.field-meta.xml
<CustomField>
    <fullName>AI_Intent_Action__c</fullName>
    <label>Intent Action</label>
    <referenceTo>AI_Intent_Action__c</referenceTo>
    <relationshipLabel>Intent Action Details</relationshipLabel>
    <relationshipName>Intent_Action_Details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>