force-app/main/default/objects/AI_Intent_Action_Detail__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hardcoded</fullName>
            </value>
            <value>
                <fullName>AI Extracted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>