force-app/main/default/objects/AI_Intent_Action_Detail__c/fields/Value__c.field-meta.xml
<CustomField>
    <fullName>Value__c</fullName>
    <description>For Hardcoded type: the literal value or token ({TODAY}, {UserId}, {NOW}, {relatedToId}, {recordId}). For AI Extracted type: the description/instruction telling the AI what to extract for this field.</description>
    <label>Value</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>